[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]

requires-python = ">=3.11.3"

name = "xy_request_handler_base"

authors = [{ name = "余洋", email = "yuyangit.0515@qq.com" }]
description = "tornado request基础请求封装模块"

dynamic = ["version"]

classifiers = ["Programming Language :: Python :: 3"]

dependencies = ["tornado", "django", "xy_type", "xy_string"]

readme = "README.md"

[project.scripts]

[tool.setuptools.packages.find]
where = ["./"]
include = [
    "xy_request_handler_base",
] # alternatively: `exclude = ["additional*"]`
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "VERSION" }
